# LogUtils

./: CMakeLists.txt  LICENSE  README.md
inc/: ColorCodes.h  LogInternals.h  LogLevel.h  LogMacros.h  LogStream.h  LogUtils.h  ThreadUtil.h
src/: LogStream.cpp  LogUtils.cpp  ThreadUtil.cpp
tests/: main.cpp
